--- a/PainelDeControle/HtmlPage.html
+++ b/PainelDeControle/HtmlPage.html
@@ -36,8 +36,18 @@
         </div>
 
         <div class="w3-container">
-            <div class="w3-left">
-                <h4>&nbsp;&nbsp;&nbsp;<asp:Literal ID="lbl_motoboy" runat="server"></asp:Literal></h4>
+            <br />
+            <div class="w3-third">
+                <h4>&nbsp;&nbsp;&nbsp;<small>Motoboy:&nbsp;</small><asp:Literal ID="lbl_motoboy" runat="server"></asp:Literal></h4>
+            </div>
+            <div class="w3-third w3-center">
+                <h4><small>Valor Total:&nbsp;</small><asp:Literal ID="lbl_totalPconta" runat="server"></asp:Literal></h4>
+            </div>
+            <div class="w3-third">
+                <button id="bt_arquivar" type="button" class="w3-btn w3-round w3-border w3-light-blue w3-hover-red w3-right"
+                        onclick="arquivar();">
+                    ARQUIVAR&nbsp;<i class="fa fa-file-archive-o" aria-hidden="true"></i>
+                </button>
             </div>
         </div>
 
@@ -56,35 +66,6 @@
                     </thead>
                     <asp:Literal ID="literal_realizadas" runat="server"></asp:Literal>
                 </table>
-                <br />
-                <div class="w3-container">
-                    <div>
-                        <div class="col-md-3">
-                            <select class="form-control" id="selectStatus">
-                                <option selected value="0">Selecione um Status</option>
-                                <option value="EM ABERTO">EM ABERTO</option>
-                                <option value="ENTREGA REALIZADA">ENTREGA REALIZADA</option>
-                                <option value="MUDOU-SE">MUDOU-SE</option>
-                                <option value="AUSENTE">AUSENTE</option>
-                                <option value="NÃO QUIZ RECEBER">NÃO QUIZ RECEBER</option>
-                                <option value="ÁREA DE RISCO">ÁREA DE RISCO</option>
-                                <option value="ENDEREÇO INSUFICIENTE">ENDEREÇO INSUFICIENTE</option>
-                            </select>
-                        </div>
-
-                        <div class="col-md-2">
-                            <button id="btstatus" type="button" class="w3-btn w3-round w3-border w3-light-green w3-hover-green btcontroles" onclick="">Alterar Status&nbsp;<i class="fa fa-check-square-o" aria-hidden="true"></i></button>
-                        </div>
-
-
-                    </div>
-                    <div class="w3-right">
-                        <button id="bt_arquivar" type="button" class="w3-btn w3-round w3-border w3-light-blue w3-hover-blue btcontroles" onclick="">ARQUIVAR&nbsp;<i class="fa fa-floppy-o" aria-hidden="true"></i></button>
-                        <h4><asp:Literal ID="lbl_totalPconta" runat="server"></asp:Literal>
-                        </h4>
-                    </div>
-
-                </div>
             </div>
         </div>
     </div>
@@ -95,6 +76,14 @@
         <div class="panel-heading text-center">
             <h4 class="panel-title">Entregas não Realizadas</h4>
         </div>
+
+        <div class="w3-container">
+            <br />
+            <button id="bt_reagendar" type="button" class="w3-btn w3-round w3-border w3-light-blue w3-hover-blue w3-right" onclick="">
+                REAGENDAR&nbsp;<i class="fa fa-undo" aria-hidden="true"></i>
+            </button>
+        </div>
+
         <div class="panel-body">
             <div class="w3-container w3-border w3-round w3-padding-16 w3-light-gray w3-small">
                 <table id="MyTable" class="w3-table-all w3-hoverable">
@@ -111,26 +100,153 @@
                     </thead>
                     <asp:Literal ID="literal_nao_Realizadas" runat="server"></asp:Literal>
                 </table>
-
-                <br />
-
-                <div class="w3-container">
-
-                    <div class="w3-left">
-                        <button id="bt_reagendar" type="button" class="w3-btn w3-round w3-border w3-light-blue w3-hover-blue btcontroles" onclick="">
-                            Reagendamento&nbsp;<i class="fa fa-undo" aria-hidden="true"></i>
-                        </button>
-                    </div>
-                </div>
-
             </div>
         </div>
     </div>
+
+    <!-- Modal Alterar -->
+    <div id="div_alterar" class="w3-modal">
+        <div class="w3-modal-content w3-card-4 w3-animate-left" style="max-width: 400px">
+            <form class="w3-container">
+                <div class="w3-section w3-center">
+                    <header class="w3-container w3-blue w3-center">
+                        <h4><strong>Alterar</strong></h4>
+                    </header>
+                    <br />
+                    <i class="fa fa-3x fa-exclamation-triangle" aria-hidden="true"></i>
+                    <br />
+
+                    <div class="col-md-3">
+                        <select class="form-control" id="selectStatus">
+                            <option selected value="0">Selecione um Status</option>
+                            <option value="EM ABERTO">EM ABERTO</option>
+                            <option value="ENTREGA REALIZADA">ENTREGA REALIZADA</option>
+                            <option value="MUDOU-SE">MUDOU-SE</option>
+                            <option value="AUSENTE">AUSENTE</option>
+                            <option value="NÃO QUIZ RECEBER">NÃO QUIZ RECEBER</option>
+                            <option value="ÁREA DE RISCO">ÁREA DE RISCO</option>
+                            <option value="ENDEREÇO INSUFICIENTE">ENDEREÇO INSUFICIENTE</option>
+                        </select>
+                    </div>
+
+
+                    <p>
+                        <button type="button" class="w3-button w3-round w3-border w3-light-blue w3-hover-red" onclick="cancelar()">Cancelar</button>
+                    </p>
+                    <br />
+                </div>
+            </form>
+        </div>
+    </div>
+
+
+
+
+    <!-- Auxiliares -->
+    <input type="hidden" id="idAuxHidden" />
+    <input type="hidden" id="nomeAuxHidden" />
+    <input type="hidden" id="idAuxHidden_2" />
 
     <!-- Paginação -->
     <script type="text/javascript" src="Scripts/codePaginacao.js"></script>
     <script type="text/javascript" src="Scripts/codePaginacaoX.js"></script>
 
+    <!-- Scripts Diversas -->
+    <script type="text/javascript">
+
+        function definir_status() {
+
+            var idaux_1 = document.getElementById("selectStatus");
+            var idaux_2 = idaux_1.options[idaux_1.selectedIndex].value;
+            if (idaux_2 == "0") { alert("Selecione um Status"); return }
+
+            $("body").css("cursor", "progress");
+            document.getElementById("btstatus").disabled = true;
+
+            var registros = document.getElementsByName("chkselecao");
+            var registros_len = registros.length;
+            var marcados = 0;
+            var aux_idEntrega = "";
+
+            for (var i = 0; i < registros_len; i++) {
+                if (registros[i].checked) {
+
+                    marcados++;
+                    aux_idEntrega = registros[i].value;
+
+                    $.ajax({
+                        type: "POST",
+                        url: "wspainel.asmx/Roteiro_Alterar_Status",
+                        data: '{param0: "' + idaux_2 + '", param1: "' + aux_idEntrega + '"}',
+                        contentType: "application/json; charset=utf-8",
+                        dataType: "json",
+                        failure: function (response) {
+                            alert("Problemas ao tentar definir Motoboys");
+                        }
+                    });
+                }
+            }
+
+            if (marcados == 0) {
+                alert("Selecione uma entrega para alterar Status");
+                $("body").css("cursor", "default");
+                document.getElementById("btstatus").disabled = false;
+                return
+            }
+
+            mensagem();
+
+        }
+
+        function mensagem() {
+
+            var v1 = document.getElementById('idAuxHidden');
+            var v2 = document.getElementById('nomeAuxHidden');
+
+            alert("Ok. Atualizado");
+            var linkurl = "Roteiros_Pcontas_Indiv.aspx?p1=" + v1 + "&p2=" + v2;
+            window.location.href = linkurl;
+        }
+
+        function arquivar() {
+
+            var conf = confirm("Confirma Arquivamento de entregas Realizadas ?");
+            if (conf == false) { return; }
+
+            var v1 = document.getElementById('idAuxHidden').value;
+
+            $("body").css("cursor", "progress");
+            document.getElementById("bt_arquivar").disabled = true;
+
+            $.ajax({
+                type: "POST",
+                url: "wspainel.asmx/Roteiro_Arquivar",
+                data: '{param1: "' + v1 + '"}',
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    $("body").css("cursor", "default");
+                    alert("Ok. Arquivados");
+                },
+                failure: function (response) {
+                    alert(response.d);
+                }
+            });
+
+        }
+
+        function cancelar() {
+            document.getElementById('div_alterar').style.display = "none";
+        }
+
+        function alterar(idaux) {
+            document.getElementById('div_alterar').style.display = "block";
+            document.getElementById('idAuxHidden_2').value = idaux;
+        }
+
+    </script>
+
+    <asp:Literal ID="Literal_Aux" runat="server"></asp:Literal>
 
 </body>
 </html>
